prevent chat error message shifting input field

--- a/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
@@ -100,6 +100,12 @@
   }
 }
 
+.info {
+  &:before {
+    content: "\00a0"; // non-breaking space
+  }
+}
+
 .error,
 .info {
   font-size: calc(var(--font-size-base) * .75);
@@ -109,10 +115,6 @@
 
   [dir="rtl"] & {
     text-align: right;
-  }
-
-  &:before {
-    content: "\00a0"; // non-breaking space
   }
 }
 
